2004-01-29  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.1 released.

2004-01-28  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14 released.

2004-01-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h_vms): Set MALLOC_0_IS_NONNULL to 0.
	(config.h.msvc): Set MALLOC_0_IS_NONNULL to 1.

2004-01-17  Bruno Haible  <bruno@clisp.org>

	* windows/intl.rc: Bump version number to 0.14.

2004-01-10  Bruno Haible  <bruno@clisp.org>

	* configure.ac: When --disable-csharp was given, set BUILDCSHARP=no.

2003-12-26  Bruno Haible  <bruno@clisp.org>

	Support for C#.
	* intl-csharp: New subdirectory.
	* Makefile.am (SUBDIRS): Add intl-csharp.
	(DIST_SUBDIRS): Add intl-csharp.
	* configure.ac: Invoke gt_CSHARPCOMP. Set BUILDCSHARP.
	(AC_CONFIG_FILES): Add intl-csharp/Makefile and lib/csharpcomp.sh.

2003-12-12  Bruno Haible  <bruno@clisp.org>

	Assume automake-1.8.
	* Makefile.am (html): Remove rule.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Invoke gl_ALLOCSA instead of gl_FUNC_ALLOCA.

2003-12-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13.1 released.

2003-11-30  Bruno Haible  <bruno@clisp.org>

	* gettext-0.13 released.

2003-11-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Define SIZE_MAX and inline.

2003-11-16  Bruno Haible  <bruno@clisp.org>

	* configure.ac (man/Makefile): Postprocess with FIX_MAKEFILE_DISTRIB.

2003-11-13  Bruno Haible  <bruno@clisp.org>

	* configure.ac (docdir): New variable.

2003-11-04  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (MAKEINFO): Set LC_MESSAGES and LC_ALL to empty as well.

2003-10-31  Bruno Haible  <bruno@clisp.org>

	* configure.ac: Remove argument of FIX_MAKEFILE_COMPILE.

2003-09-16  Bruno Haible  <bruno@clisp.org>

	Portability to SunOS 4.
	* configure.ac: Also check for strtoul and atexit.

2003-08-29  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (config.h.msvc): Define HAVE_DECL__SNPRINTF,
	HAVE_DECL__SNWPRINTF.

2003-08-24  Bruno Haible  <bruno@clisp.org>
